recursion.logo.square.FourSquare.scala.error
Compilation error:
FourSquare:1: error: not found: value forwad
override def run() { brushDown() ; forward(100) ; right(90) ; forward(100) ; right(90) ; forward(100) ; right(90) ; forward(200) ; right(90) ; forward(100) ; right(90) ; forward(100) ; right(90) ; forwad(200) ; right(90) ; forward(100) ; right(90) ; forward(100) ; 
                                                                                                                                                                                                     ^